<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.github.jsoagger</groupId>
		<artifactId>jsoagger-core</artifactId>
		<version>1.0.1-SNAPSHOT</version>
	</parent>

	<name>JSoagger jfxcore view definition</name>
	<description>JSoagger JAVAFX core view definition</description>
	<artifactId>jsoagger-jfxcore-viewdefinition</artifactId>

	<dependencies>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
					<target>${java.target.level}</target>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<fork>true</fork>
					<executable>${jdk}/bin/javac</executable>
					<compilerArgs>
						<arg>--add-modules=java.xml.bind,java.activation</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<sourceFileExcludes>
						<sourceFileExclude>module-info.java</sourceFileExclude>
					</sourceFileExcludes>
					<additionalOptions>
						<additionalOption>-Xdoclint:none</additionalOption>
					</additionalOptions>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>